--- a/Code/Molecular_Processing.ipynb
+++ b/Code/Molecular_Processing.ipynb
@@ -56,7 +56,7 @@
     "\n",
     "def assign_id(standard_smiles):\n",
     "    if standard_smiles not in standard_smiles_to_id:\n",
-    "        standard_smiles_to_id[standard_smiles] = 'MC-' + str(len(standard_smiles_to_id) + 4593).zfill(4) #Continue with MC-4592\n",
+    "        standard_smiles_to_id[standard_smiles] = 'MC-' + str(len(standard_smiles_to_id) +1).zfill(4) \n",
     "    return standard_smiles_to_id[standard_smiles]\n",
     "\n",
     "# Assuming sample_data is your DataFrame and standard_smiles_to_id is your dictionary\n",
